1.1.8
Implement Network Cables
More MiniMessage formatting
Minor Fixes