@@ -1,7 +1,5 @@
 package org.jamesphbennett.massstorageserver.commands;
 
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.format.NamedTextColor;
 import net.kyori.adventure.text.minimessage.MiniMessage;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
@@ -10,6 +8,7 @@ import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 import org.jamesphbennett.massstorageserver.MassStorageServer;
+import org.jetbrains.annotations.NotNull;
 
 import java.sql.Connection;
 import java.sql.PreparedStatement;
@@ -29,7 +28,7 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public boolean onCommand(CommandSender sender, Command command, String label, String[] args) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
         if (args.length == 0) {
             sendHelpMessage(sender);
             return true;
@@ -73,7 +72,7 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
     }
 
     private void sendHelpMessage(CommandSender sender) {
-        sender.sendMessage(miniMessage.deserialize("<gold><bold>=== Mass Storage Server Commands ===</bold></gold>"));
+        sender.sendMessage(miniMessage.deserialize("<gold>=== Mass Storage Server Commands ==="));
         sender.sendMessage(miniMessage.deserialize("<yellow>/mss help - Show this help message"));
 
         if (sender.hasPermission("massstorageserver.admin")) {
@@ -96,16 +95,16 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
         }
 
         try {
-            // Look up disk in database with tier information
+            // Look up disk in database
             try (Connection conn = plugin.getDatabaseManager().getConnection();
                  PreparedStatement stmt = conn.prepareStatement(
-                         "SELECT crafter_uuid, crafter_name, used_cells, max_cells, tier FROM storage_disks WHERE disk_id = ?")) {
+                         "SELECT crafter_uuid, crafter_name, used_cells, max_cells FROM storage_disks WHERE disk_id = ?")) {
 
                 stmt.setString(1, diskId.toUpperCase());
 
                 try (ResultSet rs = stmt.executeQuery()) {
                     if (!rs.next()) {
-                        sender.sendMessage(miniMessage.deserialize("<red>Storage disk with ID '<yellow>" + diskId + "</yellow>' not found."));
+                        sender.sendMessage(miniMessage.deserialize("<red>Storage disk with ID '" + diskId + "' not found."));
                         return;
                     }
 
@@ -113,32 +112,9 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
                     String crafterName = rs.getString("crafter_name");
                     int usedCells = rs.getInt("used_cells");
                     int maxCells = rs.getInt("max_cells");
-                    String tier = rs.getString("tier");
 
-                    // CRITICAL FIX: Default to 1k if tier is null/empty from database
-                    if (tier == null || tier.trim().isEmpty()) {
-                        tier = "1k";
-                        plugin.getLogger().warning("Disk " + diskId + " had no tier in database, defaulting to 1k for recovery");
-                    }
-
-                    // FIXED: Create the storage disk with the correct tier from database
-                    ItemStack recoveredDisk;
-                    switch (tier.toLowerCase()) {
-                        case "1k" -> recoveredDisk = plugin.getItemManager().createStorageDisk(crafterUUID, crafterName);
-                        case "4k" -> recoveredDisk = plugin.getItemManager().createStorageDisk4k(crafterUUID, crafterName);
-                        case "16k" -> recoveredDisk = plugin.getItemManager().createStorageDisk16k(crafterUUID, crafterName);
-                        case "64k" -> recoveredDisk = plugin.getItemManager().createStorageDisk64k(crafterUUID, crafterName);
-                        default -> {
-                            plugin.getLogger().warning("Unknown tier '" + tier + "' for disk " + diskId + ", defaulting to 1k");
-                            recoveredDisk = plugin.getItemManager().createStorageDisk(crafterUUID, crafterName);
-                            tier = "1k";
-                        }
-                    }
-
-                    // CRITICAL: Use createStorageDiskWithId to preserve the exact disk ID
-                    recoveredDisk = plugin.getItemManager().createStorageDiskWithId(diskId, crafterUUID, crafterName);
-
-                    // Update the lore with current stats
+                    // Create the storage disk
+                    ItemStack recoveredDisk = plugin.getItemManager().createStorageDisk(crafterUUID, crafterName);
                     recoveredDisk = plugin.getItemManager().updateStorageDiskLore(recoveredDisk, usedCells, maxCells);
 
                     // Give to player
@@ -150,26 +126,15 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
                         sender.sendMessage(miniMessage.deserialize("<green>Recovery successful! Disk added to your inventory."));
                     }
 
-                    // Calculate and show capacity info
-                    int itemsPerCell = plugin.getItemManager().getItemsPerCellForTier(tier);
-                    int totalCapacity = maxCells * itemsPerCell;
-                    String tierDisplayName = convertTierDisplayToMiniMessage(tier);
-
-                    sender.sendMessage(miniMessage.deserialize("<gray>Disk ID: <white>" + diskId));
-                    sender.sendMessage(miniMessage.deserialize("<gray>Tier: " + tierDisplayName));
-                    sender.sendMessage(miniMessage.deserialize("<gray>Original Crafter: <white>" + crafterName));
-                    sender.sendMessage(miniMessage.deserialize("<gray>Cells Used: <yellow>" + usedCells + "</yellow>/<white>" + maxCells));
-                    sender.sendMessage(miniMessage.deserialize("<gray>Total Capacity: <aqua>" + String.format("%,d", totalCapacity) + "</aqua> items"));
-
-                    plugin.getLogger().info("Successfully recovered " + tier.toUpperCase() + " disk " + diskId +
-                            " for " + player.getName() + " (" + usedCells + "/" + maxCells + " cells used)");
+                    sender.sendMessage(miniMessage.deserialize("<gray>Disk ID: " + diskId));
+                    sender.sendMessage(miniMessage.deserialize("<gray>Original Crafter: " + crafterName));
+                    sender.sendMessage(miniMessage.deserialize("<gray>Cells Used: " + usedCells + "/" + maxCells));
                 }
             }
 
         } catch (Exception e) {
             sender.sendMessage(miniMessage.deserialize("<red>Error during recovery: " + e.getMessage()));
             plugin.getLogger().severe("Error during disk recovery: " + e.getMessage());
-            e.printStackTrace();
         }
     }
 
@@ -183,7 +148,7 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
         if (args.length >= 3) {
             target = plugin.getServer().getPlayer(args[2]);
             if (target == null) {
-                sender.sendMessage(miniMessage.deserialize("<red>Player '<yellow>" + args[2] + "</yellow>' not found."));
+                sender.sendMessage(miniMessage.deserialize("<red>Player '" + args[2] + "' not found."));
                 return;
             }
         } else if (sender instanceof Player) {
@@ -197,6 +162,7 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
             case "server", "storage_server" -> plugin.getItemManager().createStorageServer();
             case "bay", "drive_bay" -> plugin.getItemManager().createDriveBay();
             case "terminal", "mss_terminal" -> plugin.getItemManager().createMSSTerminal();
+            case "cable", "network_cable" -> plugin.getItemManager().createNetworkCable();
             case "disk", "storage_disk", "disk1k" -> plugin.getItemManager().createStorageDisk(
                     target.getUniqueId().toString(), target.getName());
             case "disk4k" -> plugin.getItemManager().createStorageDisk4k(
@@ -210,21 +176,21 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
 
         if (item == null) {
             sender.sendMessage(miniMessage.deserialize("<red>Invalid item type. Available:"));
-            sender.sendMessage(miniMessage.deserialize("<yellow>Blocks: <white>server, bay, terminal"));
-            sender.sendMessage(miniMessage.deserialize("<yellow>Disks: <white>disk1k, disk4k, disk16k, disk64k"));
+            sender.sendMessage(miniMessage.deserialize("<yellow>Blocks: server, bay, terminal, cable"));
+            sender.sendMessage(miniMessage.deserialize("<yellow>Disks: disk1k, disk4k, disk16k, disk64k"));
             return;
         }
 
         if (target.getInventory().firstEmpty() == -1) {
             target.getWorld().dropItemNaturally(target.getLocation(), item);
-            sender.sendMessage(miniMessage.deserialize("<green>Item given to <yellow>" + target.getName() + "</yellow> (dropped due to full inventory)."));
+            sender.sendMessage(miniMessage.deserialize("<green>Item given to " + target.getName() + " (dropped due to full inventory)."));
         } else {
             target.getInventory().addItem(item);
-            sender.sendMessage(miniMessage.deserialize("<green>Item given to <yellow>" + target.getName() + "</yellow>."));
+            sender.sendMessage(miniMessage.deserialize("<green>Item given to " + target.getName() + "."));
         }
 
         if (!sender.equals(target)) {
-            target.sendMessage(miniMessage.deserialize("<green>You received a <aqua>" + args[1] + "</aqua> from <yellow>" + sender.getName() + "</yellow>."));
+            target.sendMessage(miniMessage.deserialize("<green>You received a " + args[1] + " from " + sender.getName() + "."));
         }
     }
 
@@ -240,26 +206,15 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
                  ResultSet rs = stmt.executeQuery()) {
                 rs.next();
                 int networkCount = rs.getInt(1);
-                sender.sendMessage(miniMessage.deserialize("<yellow>Active Networks: <white>" + networkCount));
+                sender.sendMessage(miniMessage.deserialize("<yellow>Active Networks: " + networkCount));
             }
 
-            // Count storage disks by tier
-            try (PreparedStatement stmt = conn.prepareStatement(
-                    "SELECT tier, COUNT(*) as count FROM storage_disks GROUP BY tier ORDER BY tier");
+            // Count storage disks
+            try (PreparedStatement stmt = conn.prepareStatement("SELECT COUNT(*) FROM storage_disks");
                  ResultSet rs = stmt.executeQuery()) {
-
-                sender.sendMessage(miniMessage.deserialize("<yellow>Storage Disks by Tier:"));
-                int totalDisks = 0;
-                while (rs.next()) {
-                    String tier = rs.getString("tier");
-                    int count = rs.getInt("count");
-                    totalDisks += count;
-
-                    // Display tier with proper formatting - convert ChatColor to MiniMessage
-                    String tierDisplay = convertTierDisplayToMiniMessage(tier != null ? tier : "1k");
-                    sender.sendMessage(miniMessage.deserialize("<gray>  " + tierDisplay + " <gray>: <white>" + count));
-                }
-                sender.sendMessage(miniMessage.deserialize("<yellow>Total Storage Disks: <white>" + totalDisks));
+                rs.next();
+                int diskCount = rs.getInt(1);
+                sender.sendMessage(miniMessage.deserialize("<yellow>Total Storage Disks: " + diskCount));
             }
 
             // Count stored items
@@ -268,26 +223,21 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
                 rs.next();
                 int itemTypes = rs.getInt(1);
                 long totalItems = rs.getLong(2);
-                sender.sendMessage(miniMessage.deserialize("<yellow>Item Types Stored: <white>" + itemTypes));
-                sender.sendMessage(miniMessage.deserialize("<yellow>Total Items Stored: <white>" + totalItems));
+                sender.sendMessage(miniMessage.deserialize("<yellow>Item Types Stored: " + itemTypes));
+                sender.sendMessage(miniMessage.deserialize("<yellow>Total Items Stored: " + totalItems));
+            }
+
+            // Count network cables
+            try (PreparedStatement stmt = conn.prepareStatement("SELECT COUNT(*) FROM network_blocks WHERE block_type = 'NETWORK_CABLE'");
+                 ResultSet rs = stmt.executeQuery()) {
+                rs.next();
+                int cableCount = rs.getInt(1);
+                sender.sendMessage(miniMessage.deserialize("<yellow>Network Cables Placed: " + cableCount));
             }
 
         } catch (Exception e) {
             sender.sendMessage(miniMessage.deserialize("<red>Error retrieving information: " + e.getMessage()));
         }
-    }
-
-    /**
-     * Convert tier display name to MiniMessage format
-     */
-    private String convertTierDisplayToMiniMessage(String tier) {
-        return switch (tier.toLowerCase()) {
-            case "1k" -> "<white>1K";
-            case "4k" -> "<yellow>4K";
-            case "16k" -> "<aqua>16K";
-            case "64k" -> "<light_purple>64K";
-            default -> "<white>1K";
-        };
     }
 
     private void handleCleanup(CommandSender sender) {
@@ -305,7 +255,7 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
                  PreparedStatement stmt = conn.prepareStatement(
                          "DELETE FROM storage_items WHERE disk_id NOT IN (SELECT disk_id FROM storage_disks)")) {
                 int deletedItems = stmt.executeUpdate();
-                sender.sendMessage(miniMessage.deserialize("<green>Cleaned up <yellow>" + deletedItems + "</yellow> orphaned storage items."));
+                sender.sendMessage(miniMessage.deserialize("<green>Cleaned up " + deletedItems + " orphaned storage items."));
             }
 
             // Clean up empty storage disks with no items
@@ -313,10 +263,10 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
                  PreparedStatement stmt = conn.prepareStatement(
                          "UPDATE storage_disks SET used_cells = 0 WHERE disk_id NOT IN (SELECT DISTINCT disk_id FROM storage_items)")) {
                 int updatedDisks = stmt.executeUpdate();
-                sender.sendMessage(miniMessage.deserialize("<green>Reset <yellow>" + updatedDisks + "</yellow> empty storage disk cell counts."));
+                sender.sendMessage(miniMessage.deserialize("<green>Reset " + updatedDisks + " empty storage disk cell counts."));
             }
 
-            sender.sendMessage(miniMessage.deserialize("<green><bold>Cleanup completed successfully!</bold>"));
+            sender.sendMessage(miniMessage.deserialize("<green>Cleanup completed successfully!"));
 
         } catch (Exception e) {
             sender.sendMessage(miniMessage.deserialize("<red>Error during cleanup: " + e.getMessage()));
@@ -324,11 +274,11 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
     }
 
     @Override
-    public List<String> onTabComplete(CommandSender sender, Command command, String alias, String[] args) {
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         List<String> completions = new ArrayList<>();
 
         if (args.length == 1) {
-            List<String> commands = Arrays.asList("help");
+            List<String> commands = List.of("help");
             if (sender.hasPermission("massstorageserver.admin")) {
                 commands = Arrays.asList("help", "recovery", "give", "info", "cleanup", "test");
             }
@@ -339,7 +289,7 @@ public class MSSCommand implements CommandExecutor, TabCompleter {
                 }
             }
         } else if (args.length == 2 && args[0].equalsIgnoreCase("give")) {
-            List<String> items = Arrays.asList("server", "bay", "terminal", "disk1k", "disk4k", "disk16k", "disk64k");
+            List<String> items = Arrays.asList("server", "bay", "terminal", "cable", "disk1k", "disk4k", "disk16k", "disk64k");
             for (String item : items) {
                 if (item.toLowerCase().startsWith(args[1].toLowerCase())) {
                     completions.add(item);
